--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         Какие современные и эффективные 
         подходы к обучению вы можете 
         использовать в своей жизни?
-        <a class="header__link" href="#"> Узнать →</a>
+        <a class="header__link" href="#0"> Узнать →</a>
       </p>
       <div class="header__square-pic"></div>
       <img class="header__main-illustration" src="./images/two_again.png" alt="">
