--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/5MgBikgcWnY"
-          allowfullscreen class="video__iframe" alt=""></iframe>
+          allowfullscreen class="video__iframe"></iframe>
           <iframe id="ytplayer" type="text/html" src="https://www.youtube.com/embed/arj7oStGLkU" 
-          allowfullscreen class="video__iframe" alt=""></iframe>
+          allowfullscreen class="video__iframe"></iframe>
         </div>
       </section>
 
